Enabling tech debt changes (#813)
* Fixed websockets and sync modules to build with current code and build files.

* 1. Added mock websocket container to inject mock into websocket api
2. Nodes merge and publishes deltas to peers during websock initialisation

* Start to separate partyinfo config from core.

* Remove deprecated Class.newInstance usage.

* Resources are not applications

* Move JAXRS object creation to application object by means of 
get classes rather than creating instances in spring. MOve filtering
logic to spring created objects into specialised objects to make them 
more portable.

* add missing mapper

* Fix coverage.

* Define appttype property on Tessera App rather than use type hierachy 

Add mock service locator for tests.

* Fix config to reflect current code base

* enclave does not require service locator

* Service locator does not require a file name or other value.

* Service locator does not require a file name or other value.

* Reactivate tests

* Fix formatting rules

* Reformat